# reformat

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TRAIT_REFACTOR.md  new_features.md
refmt-cli/src/: main.rs
refmt-core/: Cargo.toml
refmt-core/src/: changes.rs  combined.rs  group.rs  lib.rs  refs.rs  rename.rs
reformat-cli/: Cargo.toml
reformat-cli/src/: config.rs  main.rs
reformat-cli/tests/: cli_integration.rs
reformat-core/: Cargo.toml
reformat-core/src/: case.rs  changes.rs  combined.rs  config.rs  converter.rs  emoji.rs  endings.rs  group.rs  header.rs  indent.rs  lib.rs  refs.rs  rename.rs  replace.rs  whitespace.rs
reformat-core/tests/: library_integration.rs
reformat-plugins/: Cargo.toml
reformat-plugins/src/: lib.rs
