[workspace]
members = [
    "refmt-core",
    "refmt-cli",
    "refmt-plugins",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["refmt Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/refmt"

[workspace.dependencies]
# Shared dependencies across workspace
regex = "1.11"
aho-corasick = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Logging and UI
log = "0.4"
simplelog = "0.12"
indicatif = "0.17"
logging_timer = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
