[workspace]
members = [
    "reformat-core",
    "reformat-cli",
    "reformat-plugins",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["Shakeeb Alireza"]
license = "MIT"
homepage = "https://github.com/shakfu/reformat"
repository = "https://github.com/shakfu/reformat"
keywords = ["code", "transform", "rename", "format", "cleanup"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[workspace.dependencies]
# Shared dependencies across workspace
regex = "1.11"
aho-corasick = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Logging and UI
log = "0.4"
simplelog = "0.12"
indicatif = "0.17"
logging_timer = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
