[package]
name = "refmt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for text and file reformatting"

[dependencies]
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true

# Optional dependencies for features
rayon = { version = "1.8", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
