[package]
name = "reformat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tool for text and file reformatting"
readme = "../README.md"

[[bin]]
name = "reformat"
path = "src/main.rs"

[dependencies]
reformat-core = { path = "../reformat-core", version = "0.1.4", features = ["parallel"] }
reformat-plugins = { path = "../reformat-plugins", version = "0.1.4" }

clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true

# Logging and UI
log.workspace = true
simplelog.workspace = true
indicatif.workspace = true
logging_timer.workspace = true
